# web2_hw_10

./: .gitignore  dz.txt  pyproject.toml
DB/: fill_db.py  test.py
my_site/my_site/: settings.py  urls.py
my_site/quotes/: admin.py  forms.py  models.py  urls.py  views.py
my_site/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_born_location_alter_author_description.py  0004_alter_author_born_location_alter_author_description.py
my_site/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  authors.html  base.html  index.html  quotes.html  t_quotes.html
my_site/quotes/templatetags/: extract_tags.py
my_site/users/: forms.py  urls.py  views.py
my_site/users/templates/users/: logout.html  signin.html
